<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shangjia_haoping_list_item"
    android:descendantFocusability="blocksDescendants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical" >

    <ImageView 
        android:id="@+id/shangjia_haoping_list_item_img"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/no_pic"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignBottom="@id/shangjia_haoping_list_item_img"
        android:layout_alignTop="@id/shangjia_haoping_list_item_img"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@id/shangjia_haoping_list_item_img" >

        <TextView
            android:id="@+id/shangjia_haoping_list_item_tv1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@string/xuhao" />

        
        
        
        <TextView
            android:id="@+id/shangjia_haoping_list_item_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shangjia_haoping_list_item_tv1"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/avg_score_shangpin" />

        <TextView 
            android:id="@+id/shangjia_haoping_list_item_tv2_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/shangjia_haoping_list_item_tv2"
            android:layout_alignBottom="@id/shangjia_haoping_list_item_tv2"
            android:text="@string/stars"
            android:textColor="#FFC125"
            />
        <TextView
            android:id="@+id/shangjia_haoping_list_item_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/shangjia_haoping_list_item_tv2"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/avg_score_fuwu" />
        <TextView 
            android:id="@+id/shangjia_haoping_list_item_tv3_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/shangjia_haoping_list_item_tv3"
            android:layout_alignBottom="@id/shangjia_haoping_list_item_tv3"
            android:text="@string/stars"
            android:textColor="#FFC125"
            />
    </RelativeLayout>
</RelativeLayout>